2005-06-17  Vlad Seryakov  <seryakov@users.sf.net>

	* sample-config.tcl: added maxinput and bufsize parameters
	for nssock section

2005-06-16  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/driver.c
	* nsd/server.c
	* nsd/nsd.h: Removed maxpost config option (RFE #1222107)

2005-06-14  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/binder.c: added missing listen call to Ns_SockListenUnix
	function.

2005-06-14  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/adpeval.c: Reformat to NaviServer coding style
	(no functional changes)

2005-06-13  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/compress.c: Fixed Ns_CompressGzip() declaration 
	when --without-zlib is used during compilation
	(first arg was lacking the "const" qualifier).

	* nsd/nswin32: Added (untested) implementation of
	NsMemMap() and NsMemUmap() calls.

2005-06-12  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/adpparse.c:
	* nsd/compress.c:
	* nsd/listen.c:
	* nsd/sock.c:
	* nsd/tclimg.c:
	* nsd/tclmisc.c:
	* nsd/tclresp.c:
	* nsd/uuencode.c:
	* nscp/nscp.c:
	* tests/tclresp.test: Fix some issues with mixing signed/unsigned
	data that gcc4 was complaining about and a couple of instances of
	uninitialised variables.

	* nsd/tclobjv.c: Simplify code and clarify comment.

	* nscgi/nscgi.c: Use non-depreciated functions.

	* nsd/str.c: Add new function Ns_StrIsHost.
	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c: Save the protocol seperate from the location in
	the driver structure and ensure the location always begins with a
	"protocol://" string.
	* nsd/server.c:
	* nsd/conn.c:
	* nsd/pathname.c: Simplify code by using protocol direct from
	driver structure and checking Host header with Ns_StrIsHost.

	* nsd/tclsock.c: Removed unused static function.

2005-06-12  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c:
	* nsd/info.c:
	* nsd/log.c:
	* nsd/queue.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclthread.c